@@ -18,7 +18,8 @@ dependencies {
 
 application {
     // Define the main class for the application.
-    mainClass = 'owlngo.gui.Main'
+    //mainClass = 'owlngo.gui.Main'
+    mainClass = 'owlngo.gui.playfield.GameScreenMain'
     // mainClass = 'owlngo.gui.editor.Editor'
 
 }
@@ -32,7 +33,7 @@ run {
  */
 
 // This is a template for the game window
-task templateTask(type: JavaExec) {
+task taskForGameScreen(type: JavaExec) {
     doFirst   {
         jvmArgs   =   [
                 '--module-path', classpath.asPath,
@@ -46,6 +47,22 @@ task templateTask(type: JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
     mainClass = 'owlngo.gui.playfield.GameScreenMain'
 }
+
+task taskForWelcomeScreen(type: JavaExec) {
+    doFirst   {
+        jvmArgs   =   [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.controls',
+                '--add-modules', 'javafx.fxml',
+                '--add-modules', 'javafx.graphics',
+                '--add-modules', 'javafx.base',
+                '--add-modules', 'javafx.swing',
+        ]
+    }
+    classpath = sourceSets.main.runtimeClasspath
+    mainClass = 'owlngo.gui.playfield.WelcomeScreenMain'
+}
+
 
 repositories {
     // Use Maven Central for resolving dependencies.
